--- a/en v2/css/travel.css
+++ b/en v2/css/travel.css
@@ -6,7 +6,7 @@
 header {
     background: url("../images/up_bis.png") repeat-x scroll left top rgb(255, 255, 255);
 	width:100%;
-	height:12rem;
+	height:24%;
 }
 
 * {
@@ -15,48 +15,46 @@ header {
     margin: 0%;
 }
 
-header .header-right {
+#header-right {
 float : right;
 margin-right : 2%;
 }
 
-header section {
+header div {
 float : right;
-height: 2rem;
 }
 
-section h2 {
+header div h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 1rem;
+font-size: 100%;
 color: #304D90;
 }
 
-header .header-left {
+#header-left {
 margin : auto;
-width: 84%;
-height: 8rem;
+width: 70%;
+height: 62%;
 }
 
 /** QUOTE HEADER **/ 
-section blockquote h1:first-letter {
+header div blockquote h1:first-letter {
     background:url("../icon/left_gui2.png") no-repeat left top;
-	padding-left:20px;
+	padding-left:25px;
 }
 
-header section  {    
+header div blockquote {    
 	background:url("../icon/right_gui2.png") no-repeat right bottom;
     text-align:justify;
 	float: right;
 	font-style: italic;
 	font-weight: normal;
-	font-size: 1rem;
-	padding-top: 5%;
-    padding-right:2%;
+	font-size: 100%;
+	padding-top: 12%;
+    padding-right:5%;
     padding-left:5%;
 	color: #F2A101;
-	height: 2rem;
 }
 
 /** FOOTER **/
@@ -66,7 +64,7 @@ footer {
 	background-origin: padding-box;
 	background-size: auto auto;
 	width: 100%;
-	height: 6rem;
+	height:12%;
 	margin : auto;
 	padding: 2% 0%;
 }
@@ -96,7 +94,7 @@ text-align: center;
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 1,5rem;
+font-size: 150%;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -108,21 +106,21 @@ text-align: center;
 #connect-facebook {
 background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
-height: 3rem;
+height: 80%;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
 background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
-height: 3rem;
+height: 80%;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
 background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
-height: 3rem;
+height: 80%;
 padding: 0% 0% 10% 20%;
 }
 
@@ -144,31 +142,34 @@ nav {
 	background-color : #B6E4F2;
 	font-size: 120%;
 	letter-spacing: 1px;
-	height: 3rem;
+	height: 26%;
 	/**padding-top: 2%;**/
 }
 
-nav ul {
+#menu {
 text-align : center;
-list-style: none outside none;
-width: 75%;
+/**list-style: none;**/
+width: 70%;
 margin: auto;
-height:3rem;
+height:100%;
 }
 
 nav li {
-width: 15%;
+display:inline-block;
+position:relative;
+width: 14%; 
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
-height: 3rem;
+height: 100%;
+
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-    height: 3rem;
+	padding-top: 8%;
     vertical-align: middle;
-	width: 15%;
+	width: 14%;
 	font-weight: bold;
 }
 
@@ -185,6 +186,9 @@ nav  li:nth-child(3) {
 	background: none repeat scroll 0% 0%;
 	background-color : #43ADFE;
 }
+#menu > li:nth-child(3) > a, nav li:nth-child(3) ul li:nth-child(2) a {
+	text-decoration: underline;
+}
 nav  li:nth-child(4) {
 	background: none repeat scroll 0% 0%;
 	background-color : #219EFE;
@@ -194,6 +198,87 @@ nav li:nth-child(5) {
 	background: none repeat scroll 0% 0%;
 	background-color : #0190FE;
 }
+
+/** NAVIGATION SOUS-MENU **/
+#menu ul li{
+display:inherit;
+-webkit-border-radius:0;
+   -moz-border-radius:0;
+        border-radius:0;
+width: 100%;
+}
+#menu ul li:hover{
+-webkit-border-radius:0;
+   -moz-border-radius:0;
+        border-radius:0;
+}
+#menu ul li:last-child{
+-webkit-border-radius:0 0 4px 4px;
+   -moz-border-radius:0 0 4px 4px;
+        border-radius:0 0 4px 4px;
+}
+#menu ul{
+position:absolute;
+max-height:0;
+width:100%;
+height:auto;
+overflow:hidden;
+text-align : center;
+list-style: none;
+margin:0;
+padding-top: 7%;
+-moz-transition: .7s all .2s;
+-webkit-transition: .7s all .2s;
+-o-transition: .7s all .2s;
+-ms-transition: .7s all .2s;
+transition: .7s all .2s;
+}
+
+#menu li:hover ul{
+max-height:15em;
+}
+#menu ul a{
+padding-top: 5px;
+color: #FEE92A;
+text-align: center;
+font-size: 90%;
+}
+
+#menu li:hover li a{
+color:#FEE92A;
+text-transform:inherit;
+}
+/**#menu li:hover a,**/ #menu li li:hover a{
+color:#959594;
+}
+
+/* background des liens sous menus */
+#menu li:nth-child(2) li{
+background: none repeat scroll 0% 0%;
+background-color : #6DC0FE;
+padding-bottom: 5px;
+}
+#menu li:nth-child(3) li{
+background: none repeat scroll 0% 0%;
+background-color : #43ADFE;
+padding-bottom: 5px;
+}
+#menu li:nth-child(4) li{
+background: none repeat scroll 0% 0%;
+background-color : #219EFE;
+padding-bottom: 5px;
+}
+/* background des liens menus et sous menus au survol */
+#menu li:nth-child(2) li:hover{
+background:#B6E4F2;
+}
+#menu li:nth-child(3) li:hover{
+background:#B6E4F2;
+}
+#menu li:nth-child(4) li:hover{
+background:#B6E4F2;
+}
+
 /** CONTENT HOME **/
 body {
 	background : url("../images/body.png") repeat scroll 0% 0% transparent;
@@ -204,16 +289,26 @@ body {
 /** CONTENT **/
 .content {
 width: 100%;
-height: 40rem;
-padding-top: 2%;
+height: 190%;
 margin: auto;
 font-family: 'Helvetica Neue';
 }
 
-.content h1 {
+.content article{
+width: 100%;
+padding-top: 2%;
+}
+
+.content section {
+width: 100%;
+height: 83%;
+margin-top: 4%;
+}
+
+.content h1, #myModal h1 {
 	text-align: center;
 	color: #F2A101;
-	font-size: 3rem;
+	font-size: 250%;
 	text-align : center;
 	margin-right: 0%;
 	text-transform: uppercase;
@@ -221,35 +316,23 @@ font-family: 'Helvetica Neue';
 }
 
 .content h2 {
-	text-align: center;
-	color: #F2A101;
-	font-size: 1,5rem;
-	text-align : center;
-	margin-right: 0%;
-	margin-bottom: 0%;
-	margin-top: 3%;	
-}
-
-.content h3 {
 	color: #304D90;
 	text-align: center;
 	font-style: italic;
 	font-size: 85%;
+	padding-bottom: 3%;
 }
 
-.content p {
+.content p, #myModal p {
 	padding-top: 1%;
-	padding-bottom: 1%;
 	font-size: 120%;
 	color: #90A0D7;
 	text-align: center;
 	margin-right: 0%;
 }
 
-.content a {
-	color: #2252A5;
-	font-style: bold;
-	font-size: 120%;
+#myModal p {
+margin-top: 3%;
 }
 
 /** Soulignement des liens **/
@@ -258,7 +341,7 @@ font-family: 'Helvetica Neue';
 	border-bottom: 1px dashed;
 }
 
-.content strong {
+.content strong, #myModal strong {
 	color: #F2A101;
 }
 
@@ -278,5 +361,51 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
-	font-size: 100%;
+}
+
+.reveal-modal-bg { 
+		position: fixed; 
+		height: 100%;
+		width: 100%;
+		background: #000;
+		background: rgba(0,0,0,.8);
+		z-index: 100;
+		display: none;
+		top: 0;
+		left: 0; 
+}
+	
+.reveal-modal {
+		visibility: hidden;
+		top: 100px; 
+		left: 50%;
+		margin-left: -300px;
+		width: 600px;
+		background: #eee url(modal-gloss.png) no-repeat -200px -80px;
+		position: absolute;
+		z-index: 101;
+		padding: 30px 40px 34px;
+		-moz-border-radius: 5px;
+		-webkit-border-radius: 5px;
+		border-radius: 5px;
+		-moz-box-shadow: 0 0 10px rgba(0,0,0,.4);
+		-webkit-box-shadow: 0 0 10px rgba(0,0,0,.4);
+		-box-shadow: 0 0 10px rgba(0,0,0,.4);
+}
+		
+.reveal-modal.small 		{ width: 200px; margin-left: -140px;}
+.reveal-modal.medium 		{ width: 400px; margin-left: -240px;}
+.reveal-modal.large 		{ width: 600px; margin-left: -340px;}
+.reveal-modal.xlarge 		{ width: 800px; margin-left: -440px;}
+	
+.reveal-modal .close-reveal-modal {
+		font-size: 22px;
+		line-height: .5;
+		position: absolute;
+		top: 8px;
+		right: 11px;
+		color: #aaa;
+		text-shadow: 0 -1px 1px rbga(0,0,0,.6);
+		font-weight: bold;
+		cursor: pointer;
 }
