--- a/en v2/css/wcibring.css
+++ b/en v2/css/wcibring.css
@@ -6,7 +6,7 @@
 header {
     background: url("../images/up_bis.png") repeat-x scroll left top rgb(255, 255, 255);
 	width:100%;
-	height:12rem;
+	height:24%;
 }
 
 * {
@@ -15,48 +15,46 @@ header {
     margin: 0%;
 }
 
-header .header-right {
+#header-right {
 float : right;
 margin-right : 2%;
 }
 
-header section {
+header div {
 float : right;
-height: 2rem;
 }
 
-section h2 {
+header div h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 1rem;
+font-size: 100%;
 color: #304D90;
 }
 
-header .header-left {
+#header-left {
 margin : auto;
-width: 84%;
-height: 8rem;
+width: 70%;
+height: 62%;
 }
 
 /** QUOTE HEADER **/ 
-section blockquote h1:first-letter {
+header div blockquote h1:first-letter {
     background:url("../icon/left_gui2.png") no-repeat left top;
-	padding-left:20px;
+	padding-left:25px;
 }
 
-header section  {    
+header div blockquote {    
 	background:url("../icon/right_gui2.png") no-repeat right bottom;
     text-align:justify;
 	float: right;
 	font-style: italic;
 	font-weight: normal;
-	font-size: 1rem;
-	padding-top: 5%;
-    padding-right:2%;
+	font-size: 100%;
+	padding-top: 12%;
+    padding-right:5%;
     padding-left:5%;
 	color: #F2A101;
-	height: 2rem;
 }
 
 /** FOOTER **/
@@ -66,7 +64,7 @@ footer {
 	background-origin: padding-box;
 	background-size: auto auto;
 	width: 100%;
-	height: 6rem;
+	height:12%;
 	margin : auto;
 	padding: 2% 0%;
 }
@@ -96,7 +94,7 @@ text-align: center;
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 1,5rem;
+font-size: 150%;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -108,21 +106,21 @@ text-align: center;
 #connect-facebook {
 background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
-height: 3rem;
+height: 80%;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
 background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
-height: 3rem;
+height: 80%;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
 background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
-height: 3rem;
+height: 80%;
 padding: 0% 0% 10% 20%;
 }
 
@@ -144,31 +142,34 @@ nav {
 	background-color : #B6E4F2;
 	font-size: 120%;
 	letter-spacing: 1px;
-	height: 3rem;
+	height: 26%;
 	/**padding-top: 2%;**/
 }
 
-nav ul {
+#menu {
 text-align : center;
-list-style: none outside none;
-width: 75%;
+/**list-style: none;**/
+width: 70%;
 margin: auto;
-height:3rem;
+height:100%;
 }
 
 nav li {
-width: 15%;
+display:inline-block;
+position:relative;
+width: 14%; 
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
-height: 3rem;
+height: 100%;
+
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-    height: 3rem;
+	padding-top: 8%;
     vertical-align: middle;
-	width: 15%;
+	width: 14%;
 	font-weight: bold;
 }
 
@@ -181,12 +182,12 @@ nav  li:nth-child(2) {
 	background: none repeat scroll 0% 0%;
 	background-color : #6DC0FE;
 }
+#menu > li:nth-child(2) > a, nav li:nth-child(2) ul li:nth-child(3) a {
+	text-decoration: underline;
+}
 nav  li:nth-child(3) {
 	background: none repeat scroll 0% 0%;
 	background-color : #43ADFE;
-}
-nav  li:nth-child(3) a {
-	text-decoration: underline;
 }
 nav  li:nth-child(4) {
 	background: none repeat scroll 0% 0%;
@@ -198,127 +199,106 @@ nav li:nth-child(5) {
 	background-color : #0190FE;
 }
 
+/** NAVIGATION SOUS-MENU **/
+#menu ul li{
+display:inherit;
+-webkit-border-radius:0;
+   -moz-border-radius:0;
+        border-radius:0;
+width: 100%;
+}
+#menu ul li:hover{
+-webkit-border-radius:0;
+   -moz-border-radius:0;
+        border-radius:0;
+}
+#menu ul li:last-child{
+-webkit-border-radius:0 0 4px 4px;
+   -moz-border-radius:0 0 4px 4px;
+        border-radius:0 0 4px 4px;
+}
+#menu ul{
+position:absolute;
+max-height:0;
+width:100%;
+height:auto;
+overflow:hidden;
+text-align : center;
+list-style: none;
+margin:0;
+padding-top: 7%;
+-moz-transition: .7s all .2s;
+-webkit-transition: .7s all .2s;
+-o-transition: .7s all .2s;
+-ms-transition: .7s all .2s;
+transition: .7s all .2s;
+}
+
+#menu li:hover ul{
+max-height:15em;
+}
+#menu ul a{
+padding-top: 5px;
+color: #FEE92A;
+text-align: center;
+font-size: 90%;
+}
+
+#menu li:hover li a{
+color:#FEE92A;
+text-transform:inherit;
+}
+/**#menu li:hover a,**/ #menu li li:hover a{
+color:#959594;
+}
+
+/* background des liens sous menus */
+#menu li:nth-child(2) li{
+background: none repeat scroll 0% 0%;
+background-color : #6DC0FE;
+padding-bottom: 5px;
+}
+#menu li:nth-child(3) li{
+background: none repeat scroll 0% 0%;
+background-color : #43ADFE;
+padding-bottom: 5px;
+}
+#menu li:nth-child(4) li{
+background: none repeat scroll 0% 0%;
+background-color : #219EFE;
+padding-bottom: 5px;
+}
+/* background des liens menus et sous menus au survol */
+#menu li:nth-child(2) li:hover{
+background:#B6E4F2;
+}
+#menu li:nth-child(3) li:hover{
+background:#B6E4F2;
+}
+#menu li:nth-child(4) li:hover{
+background:#B6E4F2;
+}
+
 /** CONTENT HOME **/
 body {
 	background : url("../images/body.png") repeat scroll 0% 0% transparent;
-	margin: 0 auto;
+	margin: 0 auto;	
 }
 
-/** CONTENT **/
 .content {
-width: 100%;
-height: 56rem;
-padding-top: 4%;
-margin: auto;
+margin-right: auto;
+margin-left: auto;
+width: 90%;
 }
 
-.content h1 {
-	font-family: 'Helvetica Neue';
-	text-align: center;
-	color: #F2A101;
-	font-size: 150%;
-	margin-bottom: 1%;
-	margin-right: 0%;
-	
+.content img {
+	display: block;
+	margin-bottom:2%;
+	margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
+	width: 90%;
 }
-
-.content p {
-	padding-top: 3%;
-	font-family: 'Helvetica Neue';
-	font-size: 120%;
-	/**color: #90A0D7;**/
-	color: #5A5A5A;
-	text-align: center;
-	margin : auto;
-}
-
-/** Intérêts Globaux **/ 
-section ol li{
-	width: 37%;
-	height: 22rem;
-	background-color: #F4F4F4;	
-	list-style: none outside none;
-	position: relative;
-	margin: 1em 0%;
-	margin-bottom: 5%;
-}
-
-article {
-	padding-top: 10%;
-}
-
-
-/** Intérêts principaux **/
-#i_first ol {
-	padding : 0%;
-}
-
-#i_first ol  li:nth-child(1) {
-	float: left;
-    clear: left;
-	left: 5%;
-	border: 3px solid #FA6243;
-	border-radius: 2% 2% 2% 2%;
-	background : url("../images/ww2.png") no-repeat scroll -8px -5px transparent;
-}
-#i_first ol  li:nth-child(1) h1, #i_first ol  li:nth-child(1) strong {
-	color: #FA6243;
-}
-
-#i_first ol  li:nth-child(2) {
-	float: right;
-	clear: right;
-	right: 5%;
-	border: 3px solid #219EFE;
-	border-radius: 2% 2% 2% 2%;
-	background : url("../images/travel.png") no-repeat scroll -8px -5px transparent;
-}
-
-#i_first ol  li:nth-child(2) h1, #i_first ol  li:nth-child(2) strong {
-	color: #219EFE;
-}
-
-/** Intérêts 2nd **/
-#i_second ol {
-	padding : 0%;
-}
-
-#i_second  ol  li:nth-child(1) {
-	float: left;
-    clear: left;
-	left: 5%;
-	border: 3px solid #F2A101;
-	border-radius: 2% 2% 2% 2%;
-	background : url("../images/sports.png") no-repeat scroll -8px -5px transparent;
-}
-
-#i_second ol  li:nth-child(1) h1, #i_second ol  li:nth-child(1) strong {
-	color: #F2A101;
-}
-
-#i_second  ol  li:nth-child(2) {
-	float: right;
-	clear: right;
-	right: 5%;
-	border: 3px solid #68B962;
-	border-radius: 2% 2% 2% 2%;
-	background : url("../images/recruiting.png") no-repeat scroll -8px -5px transparent;
-}
-
-#i_second ol  li:nth-child(2) h1, #i_second ol  li:nth-child(2) strong {
-	color: #68B962;
-}
-
-/** Soulignement des liens **/
-article a:hover {
-	text-decoration: none;
-	border-bottom: 1px dashed;
-}
-
-article strong {
-	color: #F2A101;
-}
-
 
 /** DIVERS **/ 
 
@@ -329,5 +309,4 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
-	font-size: 100%;
 }
