--- a/fr/css/apropos.css
+++ b/fr/css/apropos.css
@@ -6,7 +6,7 @@
 header {
     background: url("../images/up_bis.png") repeat-x scroll left top rgb(255, 255, 255);
 	width:100%;
-	height:24%;
+	height:12rem;
 }
 
 * {
@@ -22,39 +22,41 @@ margin-right : 2%;
 
 header section {
 float : right;
+height: 2rem;
 }
 
 section h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 100%;
+font-size: 1rem;
 color: #304D90;
 }
 
 header .header-left {
 margin : auto;
-width: 70%;
-height: 62%;
+width: 84%;
+height: 8rem;
 }
 
 /** QUOTE HEADER **/ 
 section blockquote h1:first-letter {
     background:url("../icon/left_gui2.png") no-repeat left top;
-	padding-left:25px;
+	padding-left:20px;
 }
 
-section blockquote {    
+header section  {    
 	background:url("../icon/right_gui2.png") no-repeat right bottom;
     text-align:justify;
 	float: right;
 	font-style: italic;
 	font-weight: normal;
-	font-size: 100%;
-	padding-top: 12%;
-    padding-right:5%;
+	font-size: 1rem;
+	padding-top: 5%;
+    padding-right:2%;
     padding-left:5%;
 	color: #F2A101;
+	height: 2rem;
 }
 
 /** FOOTER **/
@@ -64,7 +66,7 @@ footer {
 	background-origin: padding-box;
 	background-size: auto auto;
 	width: 100%;
-	height:12%;
+	height: 6rem;
 	margin : auto;
 	padding: 2% 0%;
 }
@@ -94,7 +96,7 @@ text-align: center;
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 150%;
+font-size: 1,5rem;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -106,21 +108,21 @@ text-align: center;
 #connect-facebook {
 background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
-height: 80%;
+height: 3rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
 background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
-height: 80%;
+height: 3rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
 background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
-height: 80%;
+height: 3rem;
 padding: 0% 0% 10% 20%;
 }
 
@@ -142,32 +144,31 @@ nav {
 	background-color : #B6E4F2;
 	font-size: 120%;
 	letter-spacing: 1px;
-	height: 26%;
+	height: 3rem;
 	/**padding-top: 2%;**/
 }
 
 nav ul {
 text-align : center;
 list-style: none outside none;
-width: 70%;
+width: 75%;
 margin: auto;
-height:100%;
+height:3rem;
 }
 
 nav li {
-width: 14%;
+width: 15%;
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
-height: 100%;
+height: 3rem;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-    /**height: 45px;**/
-	padding-top: 8%;
+    height: 3rem;
     vertical-align: middle;
-	width: 14%;
+	width: 15%;
 	font-weight: bold;
 }
 
@@ -204,7 +205,7 @@ body {
 /** CONTENT **/
 .content {
 width: 100%;
-height: 80%;
+height: 37rem;
 padding-top: 4%;
 margin: auto;
 }
@@ -213,7 +214,7 @@ margin: auto;
 	font-family: 'Helvetica Neue';
 	text-align: center;
 	color: #F2A101;
-	font-size: 220%;
+	font-size: 3rem;
 	text-align : center;
 	margin-bottom: 1%;
 	margin-right: 1%;	
@@ -272,4 +273,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
