--- a/fr/css/profil.css
+++ b/fr/css/profil.css
@@ -6,7 +6,7 @@
 header {
     background: url("../images/up_bis.png") repeat-x scroll left top rgb(255, 255, 255);
 	width:100%;
-	height:24%;
+	height:12rem;
 }
 
 * {
@@ -22,39 +22,41 @@ margin-right : 2%;
 
 header section {
 float : right;
+height: 2rem;
 }
 
 section h2 {
 text-align : center;
 font-style: italic;
 font-weight: normal;
-font-size: 100%;
+font-size: 1rem;
 color: #304D90;
 }
 
 header .header-left {
 margin : auto;
-width: 70%;
-height: 62%;
+width: 84%;
+height: 8rem;
 }
 
 /** QUOTE HEADER **/ 
 section blockquote h1:first-letter {
     background:url("../icon/left_gui2.png") no-repeat left top;
-	padding-left:25px;
+	padding-left:20px;
 }
 
-section blockquote {    
+header section  {    
 	background:url("../icon/right_gui2.png") no-repeat right bottom;
     text-align:justify;
 	float: right;
 	font-style: italic;
 	font-weight: normal;
-	font-size: 100%;
-	padding-top: 12%;
-    padding-right:5%;
+	font-size: 1rem;
+	padding-top: 5%;
+    padding-right:2%;
     padding-left:5%;
 	color: #F2A101;
+	height: 2rem;
 }
 
 /** FOOTER **/
@@ -64,7 +66,7 @@ footer {
 	background-origin: padding-box;
 	background-size: auto auto;
 	width: 100%;
-	height:12%;
+	height: 6rem;
 	margin : auto;
 	padding: 2% 0%;
 }
@@ -94,7 +96,7 @@ text-align: center;
 footer h1 {
 color: #7D8484;
 font-family: 'BebasNeue';
-font-size: 150%;
+font-size: 1,5rem;
 line-height: 0.5em;
 margin-bottom: 5%;
 text-transform: lowercase;
@@ -106,21 +108,21 @@ text-align: center;
 #connect-facebook {
 background : url("../icon/facebook_maj.png") no-repeat scroll -8px -5px transparent;
 width: 25%;
-height: 80%;
+height: 3rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-linkedin {
 background : url("../icon/linkedIn_maj.png") no-repeat scroll -8px -5px transparent;
 width: 30%;
-height: 80%;
+height: 3rem;
 padding: 0% 0% 10% 20%;
 }
 
 #connect-skype {
 background : url("../icon/skype.png") no-repeat scroll -8px -5px transparent;
 width: 45%;
-height: 80%;
+height: 3rem;
 padding: 0% 0% 10% 20%;
 }
 
@@ -142,32 +144,31 @@ nav {
 	background-color : #B6E4F2;
 	font-size: 120%;
 	letter-spacing: 1px;
-	height: 26%;
+	height: 3rem;
 	/**padding-top: 2%;**/
 }
 
 nav ul {
 text-align : center;
 list-style: none outside none;
-width: 70%;
+width: 75%;
 margin: auto;
-height:100%;
+height:3rem;
 }
 
 nav li {
-width: 14%;
+width: 15%;
 border-right: 3px solid rgb(255, 255, 255);
 float: left;
-height: 100%;
+height: 3rem;
 }
 
 nav li a {
     color: #FEE92A;
     display: table-cell;
-    /**height: 45px;**/
-	padding-top: 8%;
+    height: 3rem;
     vertical-align: middle;
-	width: 14%;
+	width: 15%;
 	font-weight: bold;
 }
 
@@ -176,12 +177,13 @@ nav  li:nth-child(1) {
 	background-color : #87CBFE;
 }
 
+nav  li:nth-child(2) a {
+	text-decoration: underline;
+}
+
 nav  li:nth-child(2) {
 	background: none repeat scroll 0% 0%;
 	background-color : #6DC0FE;
-}
-nav  li:nth-child(2) a {
-	text-decoration: underline;
 }
 nav  li:nth-child(3) {
 	background: none repeat scroll 0% 0%;
@@ -196,7 +198,6 @@ nav li:nth-child(5) {
 	background: none repeat scroll 0% 0%;
 	background-color : #0190FE;
 }
-
 
 /** CONTENT HOME **/
 body {
@@ -218,7 +219,7 @@ width: 90%;
 	list-style: none outside none;
 	position: relative;
 	width: 30%;
-	height: 70%;
+	height: 35rem;
 	margin: 1em 0px;
 	background-color: #F4F4F4;
 }
@@ -239,7 +240,7 @@ width: 90%;
 text-align: center;
 font-family: 'Helvetica Neue';
 color: #FEEA34;
-font-size: 150%;
+font-size: 1,5rem;
 background-color: #87CBFE;
 line-height: 100%;
 }
@@ -259,7 +260,7 @@ width: 8%;
 	font-family: 'Helvetica Neue';
 	float : right;
 	width: 90%;
-	font-size: 210%;
+	font-size: 2,5rem;
 	padding-right: 5%;
 	padding-top: 4%;
 	text-align : center;
@@ -286,4 +287,5 @@ a {
 body, html {
 	width: 100%;
 	height: 100%;
+	font-size: 100%;
 }
